@@ -21,6 +21,7 @@
 <!-- appropriate code -->
   <articleinfo> 
     <title>&applet; Manual</title> 
+    <abstract role="description">User manual for the System Monitor applet</abstract>
     <copyright>
      <year>2005</year>
      <holder>Davyd Madeley</holder>
