@@ -1,30 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<omf>
-  <resource>
-    <creator>
-      docs@gnome.org (GDP)
-    </creator>
-    <maintainer>
-      docs@gnome.org (GDP)
-    </maintainer>
-    <title>
-     Miniaplicación Monitor del sistema V2.0.1
-    </title>
-    <date>
-      03-12-2003
-    </date>
-    <version identifier="2.0.1" date="2003-12-03" description="Updated to comply with GDSG, program version 2.3.6"/>
-    <subject category="GNOME|Applets|Utility"/>
-    <description>
-      Manual del usuario de la miniaplicación Monitor del sistema. 
-    </description>
-    <type>
-      manual del usuario
-    </type>
-    <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
-    <identifier url="multiload.xml"/>
-    <language code="es"/>
-    <relation seriesid="9a0b5202-202f-11d8-872c-c12579848e68"/>
-    <rights type="GNU FDL" license.version="1.1" holder="Sun Microsystems"/>
-  </resource>        
-</omf>
