@@ -1,30 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<omf>
-  <resource>
-    <creator>
-      docs@gnome.org (GDP)
-    </creator>
-    <maintainer>
-      docs@gnome.org (GDP)
-    </maintainer>
-    <title>
-      System Monitor Applet V2.1
-    </title>    
-    <date>
-      2004-09-02
-    </date>
-    <version identifier="2.1" date="2004-09-02" description="Updated for GNOME 2.6, program version 2.5.4"/>
-    <subject category="GNOME|Applets|Utility"/>
-    <description>
-      User manual for the System Monitor applet. 
-    </description>
-    <type>
-      user's guide
-    </type>
-    <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
-    <identifier url="multiload.xml"/>
-    <language code="eu"/>
-    <relation seriesid="9a0b5202-202f-11d8-872c-c12579848e68"/>
-    <rights type="GNU FDL" license.version="1.1" holder="Sun Microsystems"/>
-  </resource>        
-</omf>
