@@ -1,30 +1,0 @@
-<?xml version="1.0"?>
-<omf>
-  <resource>
-    <creator>
-      docs@gnome.org (GDP)
-    </creator>
-    <maintainer>
-      docs@gnome.org (GDP)
-    </maintainer>
-    <title>
-      Manuale dell'applet Controllo batteria V2.0.1
-    </title>
-    <date>
-      2003-12-03
-    </date>
-    <version identifier="2.0.1" date="2003-12-03" description="Aggiornato in conformità con GDSG, versione programma 2.3.6"/>
-    <subject category="GNOME|Applets|Utility"/>
-    <description>
-	  Manuale utente dell'applet Controllo batteria.
-    </description>
-    <type>
-      user's guide
-    </type>
-    <format mime="text/xml" dtd="-//OASIS//DTD DocBook V4.1.2//EN"/>
-    <identifier url="battstat.xml"/>
-    <language code="it"/>
-    <relation seriesid="01c4d5f0-6f7c-11d6-9d2a-d9f4212120ec"/>
-    <rights type="GNU FDL" license.version="1.1" holder="Sun Microsystems"/>
-  </resource>
-</omf>
