@@ -1,7 +1,0 @@
-figdir = figures
-docname = multiload
-lang = ko
-omffile = multiload-ko.omf
-entities = legal.xml
-include $(top_srcdir)/xmldocs.make
-dist-hook: app-dist-hook
