@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<omf>
+  <resource>
+    <subject category="GNOME|Applets|Utility"/>
+    <type>user's guide</type>
+    <relation seriesid="9a0b5202-202f-11d8-872c-c12579848e68"/>
+    <rights type="GNU FDL" license.version="1.1" holder="Sun Microsystems"/>
+  </resource>        
+</omf>
