@@ -1,29 +1,0 @@
-<omf>
-  <resource>
-    <creator>
-      docs@gnome.org (GDP)
-    </creator>
-    <maintainer>
-      docs@gnome.org (GDP)
-    </maintainer>
-    <title>
-      Panelprogrammet Systemövervakare, version 2.0.1
-    </title>
-    <date>
-      2003-12-03
-    </date>
-    <version identifier="2.0.1" date="2003-12-03" description="Uppdaterad för att överensstämma med GDSG, programversion 2.3.6"/>
-    <subject category="GNOME|Applets|Utility"/>
-    <description>
-      Användarhandbok för panelprogrammet Systemövervakare. 
-    </description>
-    <type>
-      användarhandbok
-    </type>
-    <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
-    <identifier url="multiload.xml"/>
-    <language code="sv"/>
-    <relation seriesid="9a0b5202-202f-11d8-872c-c12579848e68"/>
-    <rights type="GNU FDL" license.version="1.1" holder="Sun Microsystems"/>
-  </resource>        
-</omf>
