@@ -1,19 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<omf>
-  <resource>
-    <creator>docs@gnome.org (GDP)</creator>
-    <maintainer>docs@gnome.org (GDP)</maintainer>
-    <title>Аплет "Системний монітор"</title>    
-    <date>2004-09-02</date>
-    <version identifier="2.8" date="2004-09-02"
-	     description="Updated for GNOME 2.8, program version 2.8"/>
-    <subject category="GNOME|Applets|Utility"/>
-    <description>Довідка з аплету "Системний монітор"</description>
-    <type>посібник користувача</type>
-    <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
-    <identifier url="multiload.xml"/>
-    <language code="uk"/>
-    <relation seriesid="9a0b5202-202f-11d8-872c-c12579848e68"/>
-    <rights type="GNU FDL" license.version="1.1" holder="Sun Microsystems"/>
-  </resource>        
-</omf>
