@@ -1,7 +1,0 @@
-figdir = figures
-docname = multiload
-lang = zh_CN
-omffile = multiload-zh_CN.omf
-entities = legal.xml
-include $(top_srcdir)/xmldocs.make
-dist-hook: app-dist-hook
