@@ -1,28 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<omf>
-  <resource>
-    <creator>
-      docs@gnome.org (GDP)
-    </creator>
-    <maintainer>
-      docs@gnome.org (GDP)
-    </maintainer>
-    <title>系统监视器小程序 V2.0.1
-    </title>
-    <date>
-      2003-12-03
-    </date>
-    <version identifier="2.0.1" date="2003-12-03" description="Updated to comply with GDSG, program version 2.3.6"/>
-    <subject category="GNOME|Applets|Utility"/>
-    <description>系统监视器小程序用户手册。
-    </description>
-    <type>
-      用户指南
-    </type>
-    <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
-    <identifier url="multiload.xml"/>
-    <language code="zh_CN"/>
-    <relation seriesid="9a0b5202-202f-11d8-872c-c12579848e68"/>
-    <rights type="GNU FDL" license.version="1.1" holder="Sun Microsystems"/>
-  </resource>        
-</omf>
