@@ -1,12 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<omf>
-  <resource>
-    <creator>
-docs@gnome.org (GDP)</creator><maintainer>docs@gnome.org (GDP)</maintainer>
-    <title>系統監控 Applet V2.0.1</title>
-    <date>2003 年 12 月 3 日</date><version identifier="2.0.1" date="2003-12-03" description="Updated to comply with GDSG, program version 2.3.6"/>
-    <subject category="GNOME|Applets|Utility"/>
-    <description>系統監控 Aapplet 使用者手冊。
-    </description>
-    <type>使用者指南</type><format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/><identifier url="multiload.xml"/><language code="zh_HK"/><relation seriesid="9a0b5202-202f-11d8-872c-c12579848e68"/><rights type="GNU FDL" license.version="1.1" holder="Sun Microsystems"/></resource>        
-</omf>
