@@ -1,3 +1,12 @@
+2005-07-20  Davyd Madeley  <davyd@madeley.id.au>
+
+	* docs/Makefile.am:
+	* docs/multiload.omf.in:
+	* docs/C/multiload.xml: gnome-doc-utilise
+
+	* docs/: Remove unwanted cruft. Docbook translations will need to go
+	  once po files have been generated with xml2po.
+
 2005-07-18  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* load-graph.c: (load_graph_destroy), (load_graph_new):
